<resources>
    <string name="app_name">DLVIDEO</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="toggle_switch_flash_on">开启闪光灯</string>
    <string name="toggle_switch_flash_off">关闭闪光灯</string>
    <string name="app_camera">切换摄像头</string>
    <string name="live_push">开始推流</string>
    <string name="live_stop">结束推流</string>
    <string name="toggle_switch_beauty_on">美颜开启</string>
    <string name="toggle_switch_beauty_off">美颜关闭</string>

    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>

    <string name="VIDEO_CAPTURE_FPS">视频采集帧率（实时帧率）:</string>
    <string name="AUDIO_ENCODER_FPS">音频编码帧率（实时帧率）:</string>
    <string name="VIDEO_ENCODER_FPS">视频编码帧率（实时帧率）:</string>
    <string name="OUTPUT_BITRATE">输出码率（实时码率）:</string>
    <string name="AV_OUTPUT_DIFF">当前输出流，audio pts与video pts的差值:</string>
    <string name="AUDIO_OUTPUT_FPS">音频输出帧率（实时帧率）:</string>
    <string name="VIDEO_OUTPUT_FPS">视频输出帧率（实时帧率）:</string>
    <string name="STREAM_PUBLISH_TIME">推流发布耗时（推流开始到发布流成功耗时）:</string>
    <string name="STREAM_SERVER_IP">推流服务器IP:</string>
    <string name="VIDEO_DELAY_DURATION">视频延迟时长:</string>
    <string name="AUDIO_DELAY_DURATION">音频延迟时长:</string>
    <string name="VIDEO_CACHE_FRAME_CNT">缓冲队列视频帧数:</string>
    <string name="AUDIO_CACHE_FRAME_CNT">缓冲队列音频帧数:</string>
    <string name="VIDEO_CACHE_BYTE_SIZE">缓冲队列视频数据总数:</string>
    <string name="AUDIO_CACHE_BYTE_SIZE">缓冲队列音频数据总数:</string>
    <string name="VIDEO_FRAME_DISCARD_CNT">视频丢弃总帧数:</string>
    <string name="AUDIO_FRAME_DISCARD_CNT">音频丢弃总帧数:</string>
    <string name="CUR_VIDEO_BUEATY_DURATION">当前视频帧美颜耗时:</string>
    <string name="CUR_VIDEO_ENCODER_DURATION">当前视频帧编码耗时:</string>

    <string name="illegal_output_resolution">选择输出分辨率过大</string>


    <!--登录页面-->
    <string name="index_register">注册</string>
    <string name="index_login">登录</string>
    <string name="login_email">邮箱</string>
    <string name="login_password">密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">登录</string>
    <string name="register_text_1">学校</string>
    <string name="register_school_edit_1">请选择孩子所在的学校</string>
    <string name="register_text_2">姓名</string>
    <string name="register_school_edit_2">请输入孩子的姓名</string>
    <string name="register_text_3">生日</string>
    <string name="register_school_edit_3">请选择孩子的出生日期</string>
    <string name="register_button">开始匹配</string>
    <string name="binding_text_1">手机号</string>
    <string name="binding_edit_1">请输入手机号</string>
    <string name="binding_text_2">验证码</string>
    <string name="binding_edit_2">请输入验证码</string>
    <string name="binding_identifying">验证码</string>
    <string name="binding_button">注册完成</string>
</resources>
