<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/register_margin_left">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_margin_top"
            android:text="@string/register_text_1" />

        <EditText
            android:id="@+id/register_school"
            style="@style/Register_Edit_Bg"
            android:hint="@string/register_school_edit_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_margin_top"
            android:text="@string/register_text_2" />

        <EditText
            android:id="@+id/register_name"
            style="@style/Register_Edit_Bg"
            android:hint="@string/register_school_edit_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_margin_top"
            android:text="@string/register_text_3" />

        <EditText
            android:id="@+id/register_birthday"
            style="@style/Register_Edit_Bg"
            android:hint="@string/register_school_edit_3" />
    </LinearLayout>


    <Button
        android:id="@+id/register_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/gree_4"
        android:text="@string/register_button"
        android:textColor="@color/white" />
</FrameLayout>